// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repair calculation cell block exist 1`] = `
Object {
  "backgroundColor": "FFFFFF",
  "backgroundColorDark": "1C1C1E",
  "backgroundColorID": 45,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "flex": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "name": "text",
              "text": "1 расчёт стоимости ремонта",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "fontSize": 14,
                  "name": "text",
                  "onTap": undefined,
                  "text": "Обновлено 30 марта 2021",
                  "textColor": "80000000",
                  "textColorDark": "98FFFFFF",
                  "textColorID": 48,
                },
              ],
              "margin": "{3, 0, 0, 0}",
              "name": "stack",
            },
          ],
          "flex": 1,
          "flexDirection": "column",
          "name": "stack",
          "padding": "{0, 24, 0, 24}",
        },
        Object {
          "name": "ignore",
        },
      ],
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "flex": 0.3,
                              "fontSize": 14,
                              "margin": "{0, 0, 0, 16}",
                              "name": "text",
                              "text": "Тотальный ущерб",
                              "textColor": "80000000",
                              "textColorDark": "98FFFFFF",
                              "textColorID": 48,
                            },
                            Object {
                              "flex": 0.7,
                              "fontSize": 14,
                              "name": "text",
                              "onTap": "",
                              "text": "Нет",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                          ],
                          "flexDirection": "row",
                          "name": "stack",
                          "padding": "{0, 0, 12, 0}",
                        },
                        Object {
                          "name": "ignore",
                        },
                        Object {
                          "name": "ignore",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "flex": 0.3,
                              "fontSize": 14,
                              "margin": "{0, 0, 0, 16}",
                              "name": "text",
                              "text": "Эксперт",
                              "textColor": "80000000",
                              "textColorDark": "98FFFFFF",
                              "textColorID": 48,
                            },
                            Object {
                              "flex": 0.7,
                              "fontSize": 14,
                              "name": "text",
                              "onTap": "",
                              "text": "Оценщик",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                          ],
                          "flexDirection": "row",
                          "name": "stack",
                          "padding": "{0, 0, 12, 0}",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "flex": 0.3,
                              "fontSize": 14,
                              "margin": "{0, 0, 0, 16}",
                              "name": "text",
                              "text": "Источник",
                              "textColor": "80000000",
                              "textColorDark": "98FFFFFF",
                              "textColorID": 48,
                            },
                            Object {
                              "flex": 0.7,
                              "fontSize": 14,
                              "name": "text",
                              "onTap": "",
                              "text": "Аудатекс",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                          ],
                          "flexDirection": "row",
                          "name": "stack",
                          "padding": "{0, 0, 12, 0}",
                        },
                      ],
                      "flexDirection": "column",
                      "name": "stack",
                      "padding": "{8, 16, 8, 16}",
                    },
                    Object {
                      "backgroundColor": "1A000000",
                      "backgroundColorDark": "1AFFFFFF",
                      "backgroundColorID": 45,
                      "height": 1,
                      "margin": "{0,0,0,0}",
                      "name": "stack",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "alignItems": "center",
                          "children": Array [
                            Object {
                              "fontSize": "16",
                              "margin": "{0, 0, 0, 16}",
                              "name": "text",
                              "text": "Общая стоимость",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                            Object {
                              "fontSize": "16",
                              "fontWeight": "semibold",
                              "name": "text",
                              "text": "100 500 ₽",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                          ],
                          "flex": "1",
                          "justifyContent": "spaceBetween",
                          "minHeight": 56,
                          "name": "stack",
                          "padding": "{8, 0, 8, 0}",
                        },
                        Object {
                          "backgroundColor": "1A000000",
                          "backgroundColorDark": "1AFFFFFF",
                          "backgroundColorID": 45,
                          "height": 1,
                          "margin": "{0,0,0,0}",
                          "name": "stack",
                        },
                      ],
                      "flexDirection": "column",
                      "name": "stack",
                      "padding": "{0, 16, 0, 16}",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "flex": "1",
                              "fontSize": "20",
                              "fontWeight": "bold",
                              "margin": "{12, 0, 0, 0}",
                              "name": "text",
                              "text": "Замена",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                            Object {
                              "children": Array [
                                Object {
                                  "alignItems": "top",
                                  "children": Array [
                                    Object {
                                      "backgroundColor": "80000000",
                                      "backgroundColorDark": "98FFFFFF",
                                      "backgroundColorID": 48,
                                      "cornerRadius": "2",
                                      "height": "4",
                                      "margin": "{8, 0, 0, 14}",
                                      "name": "stack",
                                      "width": "4",
                                    },
                                    Object {
                                      "flex": "1",
                                      "fontSize": "14",
                                      "name": "text",
                                      "text": "Кузов неукомплектованный замена",
                                      "textColor": "80000000",
                                      "textColorDark": "98FFFFFF",
                                      "textColorID": 48,
                                    },
                                  ],
                                  "flex": "1",
                                  "name": "stack",
                                  "padding": "{0, 4, 0, 4}",
                                },
                              ],
                              "flex": "1",
                              "flexDirection": "column",
                              "margin": "{12, 0, 0, 0}",
                              "name": "stack",
                            },
                          ],
                          "flexDirection": "column",
                          "name": "stack",
                          "padding": "{8, 16, 8, 16}",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "flex": "1",
                              "fontSize": "20",
                              "fontWeight": "bold",
                              "margin": "{12, 0, 0, 0}",
                              "name": "text",
                              "text": "Вспомогательные работы",
                              "textColor": "000000",
                              "textColorDark": "FFFFFF",
                              "textColorID": 47,
                            },
                            Object {
                              "children": Array [
                                Object {
                                  "alignItems": "top",
                                  "children": Array [
                                    Object {
                                      "backgroundColor": "80000000",
                                      "backgroundColorDark": "98FFFFFF",
                                      "backgroundColorID": 48,
                                      "cornerRadius": "2",
                                      "height": "4",
                                      "margin": "{8, 0, 0, 14}",
                                      "name": "stack",
                                      "width": "4",
                                    },
                                    Object {
                                      "flex": "1",
                                      "fontSize": "14",
                                      "name": "text",
                                      "text": "Поперечн рычаг пр в сб замен",
                                      "textColor": "80000000",
                                      "textColorDark": "98FFFFFF",
                                      "textColorID": 48,
                                    },
                                  ],
                                  "flex": "1",
                                  "name": "stack",
                                  "padding": "{0, 4, 0, 4}",
                                },
                              ],
                              "flex": "1",
                              "flexDirection": "column",
                              "margin": "{12, 0, 0, 0}",
                              "name": "stack",
                            },
                          ],
                          "flexDirection": "column",
                          "name": "stack",
                          "padding": "{8, 16, 8, 16}",
                        },
                      ],
                      "flex": "1",
                      "flexDirection": "column",
                      "name": "stack",
                    },
                  ],
                  "flexDirection": "column",
                  "name": "onTapStack",
                  "padding": "{8, 0, 16, 0}",
                  "showHeader": true,
                  "subtitle": "19 июля 2011",
                  "title": "Детализация работ",
                },
                Object {
                  "children": Array [
                    Object {
                      "fontSize": "14",
                      "margin": "{2, 0, 0, 0}",
                      "name": "text",
                      "text": "19 июля 2011",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "fontSize": "14",
                      "name": "text",
                      "text": "100 500 ₽",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "column",
                  "name": "stack",
                },
                Object {
                  "aspectRatio": "1",
                  "contentMode": "scaleAspectFit",
                  "height": "24",
                  "margin": "{0, 8, 0, 0}",
                  "name": "image",
                  "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png",
                  "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png",
                },
              ],
              "id": 1311102000000,
              "justifyContent": "spaceBetween",
              "minHeight": 76,
              "name": "stack",
              "padding": "{20, 0, 19, 0}",
            },
            Object {
              "backgroundColor": "1A000000",
              "backgroundColorDark": "1AFFFFFF",
              "backgroundColorID": 45,
              "height": 1,
              "margin": "{0,0,0,0}",
              "name": "stack",
            },
          ],
          "flexDirection": "column",
          "name": "stack",
          "padding": "{8, 24, 0, 24}",
        },
        Object {
          "alignItems": "center",
          "children": Array [
            Object {
              "flex": "1",
              "fontSize": "12",
              "name": "text",
              "text": "Примечание: Страховые компании оценивают стоимость ремонта при наступлении страхового случая. В каждой компании могут по-разному рассчитать стоимость, в отчёте будут предоставлены все случаи оценки. Это не означает, что автомобиль ремонтировали",
              "textColor": "80000000",
              "textColorDark": "98FFFFFF",
              "textColorID": 48,
            },
          ],
          "minHeight": 24,
          "name": "stack",
          "padding": "{20, 24, 0, 24}",
        },
      ],
      "flexDirection": "column",
      "name": "stack",
    },
  ],
  "cornerRadius": "24",
  "flexDirection": "column",
  "id": "repair_calculations",
  "margin": "{0, 0, 16, 0}",
  "name": "stack",
  "padding": "{24, 0, 24, 0}",
}
`;

exports[`repair calculation cell block exist 2`] = `"<list><stack backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" cornerRadius=\\"24\\" flexDirection=\\"column\\" id=\\"repair_calculations\\" margin=\\"{0, 0, 16, 0}\\" padding=\\"{24, 0, 24, 0}\\"><stack><stack flexDirection=\\"column\\" padding=\\"{0, 24, 0, 24}\\" flex=\\"1\\"><text flex=\\"1\\" fontSize=\\"24\\" fontWeight=\\"bold\\" text=\\"1 расчёт стоимости ремонта\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack margin=\\"{3, 0, 0, 0}\\" alignItems=\\"center\\"><ignore/><text fontSize=\\"14\\" text=\\"Обновлено 30 марта 2021\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack><ignore/></stack><stack flexDirection=\\"column\\"><stack flexDirection=\\"column\\" padding=\\"{8, 24, 0, 24}\\"><stack id=\\"1311102000000\\" alignItems=\\"center\\" justifyContent=\\"spaceBetween\\" minHeight=\\"76\\" padding=\\"{20, 0, 19, 0}\\"><onTapStack flexDirection=\\"column\\" padding=\\"{8, 0, 16, 0}\\" showHeader=\\"true\\" subtitle=\\"19 июля 2011\\" title=\\"Детализация работ\\"><stack flexDirection=\\"column\\" padding=\\"{8, 16, 8, 16}\\"><stack flexDirection=\\"row\\" padding=\\"{0, 0, 12, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Тотальный ущерб\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Нет\\" onTap=\\"\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><ignore/><ignore/><stack flexDirection=\\"row\\" padding=\\"{0, 0, 12, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Эксперт\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Оценщик\\" onTap=\\"\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flexDirection=\\"row\\" padding=\\"{0, 0, 12, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Источник\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Аудатекс\\" onTap=\\"\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack></stack><stack backgroundColor=\\"1A000000\\" backgroundColorDark=\\"1AFFFFFF\\" backgroundColorID=\\"45\\" height=\\"1\\" margin=\\"{0,0,0,0}\\"/><stack flexDirection=\\"column\\" padding=\\"{0, 16, 0, 16}\\"><stack alignItems=\\"center\\" flex=\\"1\\" justifyContent=\\"spaceBetween\\" minHeight=\\"56\\" padding=\\"{8, 0, 8, 0}\\"><text fontSize=\\"16\\" margin=\\"{0, 0, 0, 16}\\" text=\\"Общая стоимость\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><text fontSize=\\"16\\" fontWeight=\\"semibold\\" text=\\"100&#160;500&#160;₽\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack backgroundColor=\\"1A000000\\" backgroundColorDark=\\"1AFFFFFF\\" backgroundColorID=\\"45\\" height=\\"1\\" margin=\\"{0,0,0,0}\\"/></stack><stack flex=\\"1\\" flexDirection=\\"column\\"><stack flexDirection=\\"column\\" padding=\\"{8, 16, 8, 16}\\"><text flex=\\"1\\" fontSize=\\"20\\" fontWeight=\\"bold\\" text=\\"Замена\\" margin=\\"{12, 0, 0, 0}\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack flexDirection=\\"column\\" flex=\\"1\\" margin=\\"{12, 0, 0, 0}\\"><stack alignItems=\\"top\\" flex=\\"1\\" padding=\\"{0, 4, 0, 4}\\"><stack cornerRadius=\\"2\\" height=\\"4\\" margin=\\"{8, 0, 0, 14}\\" width=\\"4\\" backgroundColor=\\"80000000\\" backgroundColorDark=\\"98FFFFFF\\" backgroundColorID=\\"48\\"/><text flex=\\"1\\" fontSize=\\"14\\" text=\\"Кузов неукомплектованный замена\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack></stack><stack flexDirection=\\"column\\" padding=\\"{8, 16, 8, 16}\\"><text flex=\\"1\\" fontSize=\\"20\\" fontWeight=\\"bold\\" text=\\"Вспомогательные работы\\" margin=\\"{12, 0, 0, 0}\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack flexDirection=\\"column\\" flex=\\"1\\" margin=\\"{12, 0, 0, 0}\\"><stack alignItems=\\"top\\" flex=\\"1\\" padding=\\"{0, 4, 0, 4}\\"><stack cornerRadius=\\"2\\" height=\\"4\\" margin=\\"{8, 0, 0, 14}\\" width=\\"4\\" backgroundColor=\\"80000000\\" backgroundColorDark=\\"98FFFFFF\\" backgroundColorID=\\"48\\"/><text flex=\\"1\\" fontSize=\\"14\\" text=\\"Поперечн рычаг пр в сб замен\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack></stack></stack></onTapStack><stack flex=\\"1\\" flexDirection=\\"column\\"><text fontSize=\\"14\\" margin=\\"{2, 0, 0, 0}\\" text=\\"19 июля 2011\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text fontSize=\\"14\\" text=\\"100&#160;500&#160;₽\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><image aspectRatio=\\"1\\" contentMode=\\"scaleAspectFit\\" height=\\"24\\" margin=\\"{0, 8, 0, 0}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/arrow-right/dark.png\\"/></stack><stack backgroundColor=\\"1A000000\\" backgroundColorDark=\\"1AFFFFFF\\" backgroundColorID=\\"45\\" height=\\"1\\" margin=\\"{0,0,0,0}\\"/></stack><stack alignItems=\\"center\\" minHeight=\\"24\\" padding=\\"{20, 24, 0, 24}\\"><text flex=\\"1\\" fontSize=\\"12\\" text=\\"Примечание: Страховые компании оценивают стоимость ремонта при&#160;наступлении страхового случая. В&#160;каждой компании могут по-разному рассчитать стоимость, в&#160;отчёте будут предоставлены все случаи оценки. Это не&#160;означает, что автомобиль ремонтировали\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack></stack></list>"`;

exports[`repair calculation cell block locked 1`] = `
Object {
  "backgroundColor": "FFFFFF",
  "backgroundColorDark": "1C1C1E",
  "backgroundColorID": 45,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "flex": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "name": "text",
              "text": "1 расчёт стоимости ремонта",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "fontSize": 14,
                  "name": "text",
                  "onTap": undefined,
                  "text": "Обновлено 30 марта 2021",
                  "textColor": "80000000",
                  "textColorDark": "98FFFFFF",
                  "textColorID": 48,
                },
              ],
              "margin": "{3, 0, 0, 0}",
              "name": "stack",
            },
          ],
          "flex": 1,
          "flexDirection": "column",
          "name": "stack",
          "padding": "{0, 24, 0, 24}",
        },
        Object {
          "name": "ignore",
        },
      ],
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "height": "24",
                  "name": "image",
                  "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/locker/light.png",
                  "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/locker/dark.png",
                  "width": "24",
                },
              ],
              "flex": 1,
              "name": "stack",
            },
            Object {
              "children": Array [
                Object {
                  "asHtml": true,
                  "fontSize": "14",
                  "name": "text",
                  "text": "По требованию нашего партнёра Audatex, чтобы видеть информацию о расчётах, необходимо заполнить анкету и получить от Audatex логин и пароль. <font color=\\"#2276D3\\"><a href=\\"\\">Заполнить анкету.</a></font>",
                  "textColor": "000000",
                  "textColorDark": "FFFFFF",
                  "textColorID": 47,
                },
              ],
              "flex": "8",
              "flexDirection": "column",
              "name": "stack",
              "onTap": "https://yandex.ru/support/autoru-legal/audatex-pro.html/",
            },
          ],
          "name": "stack",
        },
      ],
      "flexDirection": "column",
      "margin": "{16,24,0,24}",
      "name": "stack",
    },
  ],
  "cornerRadius": "24",
  "flexDirection": "column",
  "id": "repair_calculations",
  "margin": "{0, 0, 16, 0}",
  "name": "stack",
  "padding": "{24, 0, 24, 0}",
}
`;

exports[`repair calculation cell block locked 2`] = `"<list><stack backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" cornerRadius=\\"24\\" flexDirection=\\"column\\" id=\\"repair_calculations\\" margin=\\"{0, 0, 16, 0}\\" padding=\\"{24, 0, 24, 0}\\"><stack><stack flexDirection=\\"column\\" padding=\\"{0, 24, 0, 24}\\" flex=\\"1\\"><text flex=\\"1\\" fontSize=\\"24\\" fontWeight=\\"bold\\" text=\\"1 расчёт стоимости ремонта\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack margin=\\"{3, 0, 0, 0}\\" alignItems=\\"center\\"><ignore/><text fontSize=\\"14\\" text=\\"Обновлено 30 марта 2021\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack><ignore/></stack><stack flexDirection=\\"column\\" margin=\\"{16,24,0,24}\\"><stack><stack flex=\\"1\\"><image width=\\"24\\" height=\\"24\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/locker/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/locker/dark.png\\"/></stack><stack flexDirection=\\"column\\" onTap=\\"https://yandex.ru/support/autoru-legal/audatex-pro.html/\\" flex=\\"8\\"><text asHtml=\\"true\\" fontSize=\\"14\\" text=\\"По&#160;требованию нашего партнёра Audatex, чтобы видеть информацию о&#160;расчётах, необходимо заполнить анкету и&#160;получить от&#160;Audatex логин и&#160;пароль. &lt;font color=&quot;#2276D3&quot;&gt;&lt;a href=&quot;&quot;&gt;Заполнить анкету.&lt;/a&gt;&lt;/font&gt;\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack></stack></stack></stack></list>"`;
